Restore height of bottom part of middle so that overflow works correctly

--- a/static/css/index.css
+++ b/static/css/index.css
@@ -132,7 +132,7 @@ body>div {
 
 #middle>div:not(#top-tabs) {
     display: inline-block;
-    height: 90%;
+    height: 85%;
 }
 
 #main-middle {
